--- a/src/components/MainIllustration/MainIllustration.css
+++ b/src/components/MainIllustration/MainIllustration.css
@@ -1,6 +1,6 @@
 .illustration {
   position: relative;
-  padding: 100px;
+  /* padding: 100px; */
   width: 100%;
   height: 800px;
   background: #7a9a9b;
