--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -2,17 +2,15 @@
   padding: 0;
   margin: 0;
   text-align: center;
-  display: table;
   width: 100%;
   height: 100vh;
-  background-color: rgb(50, 126, 248);
+  background-color: #fff;
+  display: table;
 }
+
 .header__title {
-  margin: auto 0;
-  font-size: 130px;
-}
-.title {
-  color: #000;
+  color: dodgerblue;
+  height: 100px;
   font-size: 10rem;
   text-align: center;
   font-family: "Times New Roman", Times, serif;
